# VersionControl

./: .gitignore  .gitmodules  CONTRIBUTING.md  CONTRIBUTING_zh_CN.md  Cargo.toml  FRAMEWORK_CANVAS.canvas  LICENSE-MIT.md  README.md  README_zh_CN.md  build.rs  rust-analyzer.toml  setup.ps1  setup.sh
.cargo/: config.toml
.github/workflows/: rust.yml
crates/env/: Cargo.toml
crates/env/env_test/: Cargo.toml
crates/env/env_test/src/: lib.rs  test_vault_setup_and_member_register.rs  test_virtual_file_creation_and_update.rs
crates/env/src/: constants.rs  current.rs  lib.rs  member.rs  workspace.rs
crates/env/src/local/: config.rs
crates/env/src/member/: manager.rs
crates/env/src/vault/: config.rs
crates/env/src/workspace/: local.rs  member.rs  vault.rs
crates/env/src/workspace/local/: config.rs
crates/env/src/workspace/vault/: config.rs  member.rs  vitrual_file.rs
crates/service/: Cargo.toml
crates/service/service_macros/: Cargo.toml
crates/service/src/: lib.rs
crates/system_action/: Cargo.toml
crates/system_action/action_macros/: Cargo.toml
crates/system_action/action_macros/src/: lib.rs
crates/system_action/src/: action.rs  action_pool.rs  lib.rs
crates/utils/cfg_file/: Cargo.toml
crates/utils/cfg_file/cfg_file_derive/: Cargo.toml
crates/utils/cfg_file/cfg_file_derive/src/: lib.rs
crates/utils/cfg_file/cfg_file_example/: Cargo.toml
crates/utils/cfg_file/cfg_file_example/src/: main.rs
crates/utils/cfg_file/cfg_file_test/: Cargo.toml
crates/utils/cfg_file/cfg_file_test/src/: lib.rs
crates/utils/cfg_file/src/: config.rs  lib.rs
crates/utils/data_struct/: Cargo.toml
crates/utils/data_struct/src/: bi_map.rs  dada_sort.rs  data_sort.rs  lib.rs
crates/utils/member_verify/: Cargo.toml
crates/utils/member_verify/src/: key.rs  lib.rs  verifier.rs
crates/utils/sha1_hash/: Cargo.toml
crates/utils/sha1_hash/res/: story.sha1  story.txt  story_crlf.sha1
crates/utils/sha1_hash/src/: lib.rs
crates/utils/string_proc/: Cargo.toml
crates/utils/string_proc/src/: format_path.rs  format_processer.rs  lib.rs  macros.rs  simple_processer.rs  string_processer.rs
crates/utils/tcp_connection/: Cargo.toml
crates/utils/tcp_connection/src/: error.rs  handle.rs  instance.rs  instance_challenge.rs  instance_incremental_transfer.rs  lib.rs  target.rs  target_configure.rs  target_connection.rs
crates/utils/tcp_connection/tcp_connection_test/: Cargo.toml
crates/utils/tcp_connection/tcp_connection_test/res/: test_key.pub
crates/utils/tcp_connection/tcp_connection_test/res/key/: test_key.pem  test_key_private.pem  wrong_key_private.pem
crates/utils/tcp_connection/tcp_connection_test/src/: example_handle.rs  lib.rs  test_challenge.rs  test_connection.rs  test_file_transfer.rs  test_incremental_transfer.rs  test_msgpack.rs  test_tcp_target_build.rs  test_utils.rs
crates/utils/tcp_connection/tcp_connection_test/src/test_utils/: handle.rs  target.rs  target_configure.rs  target_connection.rs
crates/vcs/: Cargo.toml  todo.txt
crates/vcs/src/: constants.rs  lib.rs  service.rs  workspace.rs
crates/vcs/src/data/: sheet.rs  vault.rs
crates/vcs/src/data/local/: config.rs
crates/vcs/src/data/user/: accounts.rs
crates/vcs/src/data/vault/: config.rs  member.rs  sheets.rs  virtual_file.rs
crates/vcs/src/service/: standard_handle.rs
crates/vcs/src/workspace/: local.rs  vault.rs
crates/vcs/src/workspace/local/: config.rs
crates/vcs/src/workspace/vault/: member.rs  virtual_file.rs
crates/vcs/vcs_test/: Cargo.toml
crates/vcs/vcs_test/src/: lib.rs  test_local_workspace_setup_and_account_management.rs  test_sheet_creation_management_and_persistence.rs  test_vault_setup_and_member_register.rs  test_virtual_file_creation_and_update.rs
crates/vcs_actions/: Cargo.toml
crates/vcs_actions/src/: actions.rs  connection.rs  lib.rs  registry.rs
crates/vcs_actions/src/actions/: local_actions.rs  sheet_actions.rs  track_action.rs  user_actions.rs  virtual_file_actions.rs
crates/vcs_actions/src/connection/: action_service.rs  error.rs  protocol.rs
crates/vcs_actions/src/registry/: client_registry.rs  server_registry.rs
crates/vcs_data/: Cargo.toml  todo.md
crates/vcs_data/src/: constants.rs  current.rs  data.rs  lib.rs
crates/vcs_data/src/data/: local.rs  member.rs  sheet.rs  user.rs  vault.rs
crates/vcs_data/src/data/local/: align.rs  cached_sheet.rs  config.rs  file_status.rs  latest_file_data.rs  latest_info.rs  local_files.rs  local_sheet.rs  member_held.rs  vault_modified.rs  workspace_analyzer.rs
crates/vcs_data/src/data/vault/: config.rs  member.rs  service.rs  sheet_share.rs  sheets.rs  virtual_file.rs
crates/vcs_data/vcs_data_test/: Cargo.toml  lib.rs
crates/vcs_data/vcs_data_test/src/: lib.rs  test_local_workspace_setup_and_account_management.rs  test_sheet_creation_management_and_persistence.rs  test_sheet_share_creation_and_management.rs  test_vault_setup_and_member_register.rs  test_virtual_file_creation_and_update.rs
crates/vcs_docs/: Cargo.toml  build.rs
crates/vcs_docs/src/: docs.rs.template
examples/: Cargo.toml
src/: data.rs  lib.rs
src/data/: compile_info.rs.template
