[package]
name = "just_enough_vcs"
version = "0.1.0"
edition = "2024"
license-file = "LICENSE-MIT.md"
authors = ["Weicao-CatilGrass (GitHub)"]

[features]
all = ["cfg_file", "tcp_connection", "string_proc", "env"]
cfg_file = []
tcp_connection = []
string_proc = []
env = []

[workspace]
members = [
    "crates/utils/cfg_file",
    "crates/utils/cfg_file/cfg_file_derive",
    "crates/utils/cfg_file/cfg_file_test",

    "crates/utils/tcp_connection",
    "crates/utils/tcp_connection/tcp_connection_test",

    "crates/utils/string_proc",

    "crates/env",
]

[workspace.package]
version = "0.1.0"

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"
codegen-units = 16
incremental = true
lto = false
panic = "unwind"

[profile.release]
opt-level = 3
debug = false
split-debuginfo = "off"
codegen-units = 1
incremental = false
lto = "fat"
panic = "abort"
strip = "symbols"

[dependencies]
cfg_file = { path = "crates/utils/cfg_file" }
tcp_connection = { path = "crates/utils/tcp_connection" }
string_proc = { path = "crates/utils/string_proc" }

env = { path = "crates/env" }
