[package]
name = "just_enough_vcs"
edition = "2024"
license-file = "LICENSE-MIT.md"
authors = ["Weicao-CatilGrass (GitHub)"]

[features]
all = [
    "cfg_file",
    "data_struct",
    "sha1_hash",
    "tcp_connection",
    "string_proc",
    "vcs",
]
cfg_file = []
data_struct = []
sha1_hash = []
tcp_connection = []
string_proc = []
vcs = []

[workspace]
members = [
    "examples",

    "crates/utils/cfg_file",
    "crates/utils/cfg_file/cfg_file_derive",
    "crates/utils/cfg_file/cfg_file_test",

    "crates/utils/data_struct",

    "crates/utils/sha1_hash",

    "crates/utils/tcp_connection",
    "crates/utils/tcp_connection/tcp_connection_test",

    "crates/utils/string_proc",

    "crates/system_action",
    "crates/system_action/action_macros",

    "crates/vcs_data",
    "crates/vcs_data/vcs_data_test",

    "crates/vcs_actions",

    "crates/vcs_docs",
]

[workspace.package]
version = "0.1.0"

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"
codegen-units = 16
incremental = true
lto = false
panic = "unwind"

[profile.release]
opt-level = 3
debug = false
split-debuginfo = "off"
codegen-units = 1
incremental = false
lto = "fat"
panic = "abort"
strip = "symbols"

[dependencies]
cfg_file = { path = "crates/utils/cfg_file" }
data_struct = { path = "crates/utils/data_struct" }
sha1_hash = { path = "crates/utils/sha1_hash" }
tcp_connection = { path = "crates/utils/tcp_connection" }
string_proc = { path = "crates/utils/string_proc" }

action_system = { path = "crates/system_action" }

vcs_docs = { path = "crates/vcs_docs" }
vcs_data = { path = "crates/vcs_data" }
vcs_actions = { path = "crates/vcs_actions" }
