[package]
name = "action_system"
edition = "2024"
version.workspace = true

[dependencies]
tcp_connection = { path = "../utils/tcp_connection" }
action_system_macros = { path = "action_macros" }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# Async & Networking
tokio = "1.48.0"
