[package]
name = "vcs_actions"
edition = "2024"
version.workspace = true

[dependencies]

# Utils
tcp_connection = { path = "../utils/tcp_connection" }
cfg_file = { path = "../utils/cfg_file", features = ["default"] }
string_proc = { path = "../utils/string_proc" }

# Core dependencies
action_system = { path = "../system_action" }
vcs_data = { path = "../vcs_data" }

# Error handling
thiserror = "1.0.69"

# Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

# Async & Networking
tokio = { version = "1.46.1", features = ["full"] }

# Logging
log = "0.4.28"
