[package]
name = "env_test"
edition = "2024"
version.workspace = true

[dependencies]
tcp_connection = { path = "../../utils/tcp_connection" }
cfg_file = { path = "../../utils/cfg_file", features = ["default"] }
env = { path = "../../env" }

# Async & Networking
tokio = { version = "1.46.1", features = ["full"] }
