[package]
name = "action_system_macros"
edition = "2024"
version.workspace = true

[lib]
proc-macro = true

[dependencies]
tcp_connection = { path = "../../utils/tcp_connection" }
string_proc = { path = "../../utils/string_proc" }

syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
