[package]
name = "cfg_file"
edition = "2024"
version.workspace = true

[features]
default = ["derive"]
derive = []

[dependencies]
cfg_file_derive = { path = "cfg_file_derive" }

# Async
tokio = { version = "1.46.1", features = ["full"] }
async-trait = "0.1.88"

# Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
serde_json = "1.0.140"
ron = "0.11.0"
toml = "0.9.0"
