[package]
name = "cfg_file"
edition = "2024"
version.workspace = true

[features]
default = ["derive"]
derive = []

[dependencies]
cfg_file_derive = { path = "cfg_file_derive" }

# Async
tokio = { version = "1.48.0", features = ["full"] }
async-trait = "0.1.89"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
serde_json = "1.0.145"
ron = "0.11.0"
toml = "0.9.8"
