[package]
name = "tcp_connection"
edition = "2024"
version.workspace = true

[dependencies]
tokio = { version = "1.46.1", features = ["full"] }

# Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

# Uuid & Random
uuid = "1.18.1"

rsa = { version = "0.9", features = ["pkcs5", "sha2"] }
ed25519-dalek = "3.0.0-pre.1"
ring = "0.17.14"
rand = "0.10.0-rc.0"
base64 = "0.21.7"
