[package]
name = "vcs_test"
edition = "2024"
version.workspace = true

[dependencies]
tcp_connection = { path = "../../utils/tcp_connection" }
tcp_connection_test = { path = "../../utils/tcp_connection/tcp_connection_test" }
cfg_file = { path = "../../utils/cfg_file", features = ["default"] }
vcs = { path = "../../vcs" }

# Async & Networking
tokio = { version = "1.46.1", features = ["full"] }
