[package]
name = "vcs_data_test"
edition = "2024"
version.workspace = true

[dependencies]
tcp_connection = { path = "../../utils/tcp_connection" }
tcp_connection_test = { path = "../../utils/tcp_connection/tcp_connection_test" }
cfg_file = { path = "../../utils/cfg_file", features = ["default"] }
vcs_data = { path = "../../vcs_data" }

# Async & Networking
tokio = { version = "1.48.0", features = ["full"] }
